--- a/apps/logistics-backend/docker-compose.yml
+++ b/apps/logistics-backend/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: logistics_user
+      POSTGRES_USER: admin
       POSTGRES_PASSWORD: secret
       POSTGRES_DB: logistics_db
     volumes:
