feat(backend): server and swagger port changes. feat(frontend): - Added order model, updated OrderService for fetch and push operations - Updated CreateOrder and Orders razor pages - Registered OrderService as a scoped service rather than Singleton

--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,10 @@ go.work.sum
 .env
 
 # .NET build directories
-bin/
-obj/
+**bin/
+**obj/
+/apps/logistics-frontend/bin/
+/apps/logistics-frontend/obj/
 
 # User-specific files
 .vs/
