--- a/apps/logistics-frontend/logistics-frontend.csproj
+++ b/apps/logistics-frontend/logistics-frontend.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.14" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.14" />
+    <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
+    <None Include="wwwroot\appsettings.json" CopyToOutputDirectory="Always" />
   </ItemGroup>
 
 </Project>
