--- a/apps/logistics-backend/docker-compose.yml
+++ b/apps/logistics-backend/docker-compose.yml
@@ -11,5 +11,16 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
+  backend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+    env_file:
+      - .env.docker   
+
 volumes:
   pgdata:
