--- a/apps/logistics-backend/.env.docker
+++ b/apps/logistics-backend/.env.docker
@@ -1,10 +1,15 @@
 # .env.docker
 
+# Public facing Kong url
+PUBLIC_API_BASE_URL=http://192.168.100.11:8000/api
 # API Base URL used *within* the Docker network
-API_BASE_URL=http://backend:8080
+INTERNAL_API_BASE_URL=http://backend:8080
 
 # PostgreSQL connection string for Go backend (internal to Docker network)
 DATABASE_URL=postgres://admin:secret@db:5432/logistics_db?sslmode=disable
 
 # Optional: override port (your main.go uses 8080)
 PORT=8080
+
+# JWT secret shared with Kong for signing tokens
+JWT_SECRET=EOMFIBdh90lpWGcuLQI2KbYWotc5nZBlFgB0FmbjyYM=
