--- a/apps/logistics-backend/docker-compose.yml
+++ b/apps/logistics-backend/docker-compose.yml
@@ -20,7 +20,23 @@ services:
     depends_on:
       - db
     env_file:
-      - .env.docker   
+      - .env.docker
+  
+  kong:
+    image: kong:3.5
+    depends_on:
+      - backend
+    ports:
+      - "8000:8000"   # Proxy (use this in Postman)
+      - "8001:8001"   # Admin API
+    environment:
+      KONG_DATABASE: "off"
+      KONG_DECLARATIVE_CONFIG: /etc/kong/kong.yml
+      KONG_PROXY_ACCESS_LOG: /dev/stdout
+      KONG_ADMIN_ACCESS_LOG: /dev/stdout
+      KONG_ADMIN_LISTEN: 0.0.0.0:8001
+    volumes:
+      - ./kong/kong.yml:/etc/kong/kong.yml
 
 volumes:
   pgdata:
