chore(kong): restructure routes, add auth exemptions, rate limiting, and update .gitignore for CI reports - Split public auth routes (/api/users/create, /api/users/login) into a separate Kong route exempt from JWT - Applied rate-limiting and CORS plugins to /api and swagger routes - Added JWT consumer config for 'test-user' - Updated .gitignore to exclude Newman reports generated during CI

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,10 @@ artifacts/
 
 # Thumbnails for images
 Thumbs.db
+
+# Ignore future Newman reports generated during CI
+postman/newman-report.json
+newman/
+*.html
+*.xml
+*.json
