--- a/apps/logistics-backend/kong/kong.yml
+++ b/apps/logistics-backend/kong/kong.yml
@@ -24,6 +24,48 @@ services:
               minute: 5
               policy: local
           - name: jwt
+          - name: cors
+            config:
+              origins:
+                - "*"
+              methods:
+                - GET
+                - POST
+                - PUT
+                - DELETE
+                - OPTIONS
+              headers:
+                - Accept
+                - Authorization
+                - Content-Type
+                - X-CSRF-Token
+              exposed_headers:
+                - Link
+              credentials: false
+              max_age: 3600
+
+      - name: public-auth-route
+        paths: 
+          - /api/users/create
+          - /api/users/login
+        strip_path: false
+        plugins:
+          - name: cors
+            config:
+              origins: 
+                - "*"
+              methods: 
+                - POST
+                - OPTIONS
+              headers:
+                - Accept
+                - Authorization
+                - Content-Type
+                - X-CSRF-Token
+              exposed_headers:
+                - Link
+              credentials: false
+              max_age: 3600
 
 consumers:
   - username: test-user
